1. Метод .of [#70623] Заменил Arrays.asList() на List.of()